--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="darker_green_color">#00543d</color>
+    <color name="dark_green_color">#02523d</color>
+    <color name="light_green_color">#438832</color>
 </resources>
